[gd_scene load_steps=5 format=3 uid="uid://bakl1xy1yrmmq"]

[ext_resource type="Texture2D" uid="uid://dw2mqhxniw2bc" path="res://imagenes/interfaz_combate/cardHolderConGemaTDVS.png" id="1_3phkh"]
[ext_resource type="Script" uid="uid://b0oecnphjlewb" path="res://juego 4/ficha_mano_set.gd" id="1_h1yke"]
[ext_resource type="Texture2D" uid="uid://bcmqpsw3m55ke" path="res://imagenes/Sapito mazo.png" id="3_wspuk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kg2u8"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="FichaManoSet" type="TextureRect"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1080.0
offset_bottom = -670.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_3phkh")
expand_mode = 5
script = ExtResource("1_h1yke")

[node name="FichaTexture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -6.0
offset_right = 3.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wspuk")
expand_mode = 5

[node name="CosteTexture" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.78000003
anchor_top = 0.080000006
anchor_right = 0.975
anchor_bottom = 0.86
grow_horizontal = 2
grow_vertical = 2

[node name="CosteLabel" type="Label" parent="CosteTexture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kg2u8")
metadata/_edit_use_anchors_ = true

[node name="BloqueoPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnfriamientoLabel" type="Label" parent="BloqueoPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
